// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProgressBar /> renders a progress bar 1`] = `
<div
  className="f145humy"
>
  <div
    className="fzhd24y"
  >
    <div
      className="fq1nq8g"
      style={
        Object {
          "width": "10%",
        }
      }
    />
  </div>
</div>
`;

exports[`<ProgressBar /> renders leading 1`] = `
<div
  className="f145humy"
>
  <div
    className="f1b8vqgm"
  >
    <div
      className="f15kd1o4"
      style={
        Object {
          "width": "50%",
        }
      }
    />
  </div>
</div>
`;

exports[`<ProgressBar /> renders trailing 1`] = `
<div
  className="f145humy"
>
  <div
    className="f1d9jsba"
  >
    <div
      className="f1u758d0"
      style={
        Object {
          "width": "50%",
        }
      }
    />
  </div>
</div>
`;
